# agentic_sdk

./: .gitignore  AB_TESTING_SUMMARY.md  ANTHROPIC_SETUP.md  COMPLETE_SDK_SUMMARY.md  DASHBOARD_SUMMARY.md  EVALUATION_FRAMEWORK_SUMMARY.md  FINAL_STATUS.md  HIERARCHICAL_MEMORY_SUMMARY.md  OBSERVABILITY_SUMMARY.md  OLLAMA_INTEGRATION.md  PROJECT_STATUS.md  PROMPT_MANAGEMENT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY_FEB4.md  SESSION_SUMMARY_JAN8.md  TODO.md  TOOL_REGISTRY_SUMMARY.md  _config.yml  project plan1.txt  pyproject.toml
dashboard/: README.md  package.json
dashboard/public/: index.html
dashboard/src/components/: Dashboard.js
dashboard/src/services/: api.js
docs/: ARCHITECTURE.md
examples/: evaluation_example.py  integration_test.py  test_agent.py  test_file_tool.py  test_llm_planner.py  test_mcp_calculator.py  test_mcp_verbose.py  test_new_tools.py  test_production_features.py  test_smart_vs_basic.py
examples/tools/: calculator_tool.py  file_tool.py  http_tool.py  json_tool.py
scripts/: register_planning_prompt.py
src/agentic_sdk/: __init__.py
src/agentic_sdk/ab_testing/: __init__.py  ab_tester.py  storage.py
src/agentic_sdk/api/: server.py
src/agentic_sdk/cli/: ab_test_commands.py  main.py  prompt_commands.py  registry_commands.py  trace_commands.py
src/agentic_sdk/eval/: __init__.py  framework.py
src/agentic_sdk/mcp/: context_store.py  server.py
src/agentic_sdk/memory/: __init__.py  hierarchical_memory.py  long_term_memory.py  session_memory.py  working_memory.py
src/agentic_sdk/observability/: __init__.py  tracer.py
(+15 files in other folders)
